--- a/BIZspot-frontend/src/index.html
+++ b/BIZspot-frontend/src/index.html
@@ -1,15 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>BIZspotFrontend</title>
-  <base href="/">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-  <script src="https://js.stripe.com/v3/"></script>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>BIZspotFrontend</title>
+    <base href="/" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body>
+    <app-root></app-root>
+    <script src="https://js.stripe.com/v3/"></script>
+  </body>
 </html>
